<resources>
    <string name="app_name">Galaxy</string>
    <string name="galaxy_trucker_randomizer">Galaxy Trucker Randomizer</string>
    <string name="settings">Settings</string>
    <string name="close">SaveClose</string>
    <string name="extras_0">Extras: 0</string>
    <string name="rounds_3">Rounds: 3</string>
    <string name="another_big_expansion">Another Big Expansion</string>
    <string name="expansions">Expansions:</string>
    <string name="the_big_expansion">The Big Expansion</string>
    <string name="latest_models">Latest Models</string>
    <string name="missions">Missions</string>
    <string name="base_set">Base Set</string>
    <string name="more_than_one_rough_roads">More than one Rough Roads</string>
    <string name="others">Others:</string>
    <string name="support_crew">Support Team</string>
    <string name="close2">Close2</string>
    <string name="rounds_0">Rounds: 0</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button">Button</string>
    <string name="re_randomize">Re-Randomize</string>
    <string name="restart">RESTART</string>
    <string name="iii">III</string>
    <string name="iii_a">III A</string>
    <string name="help">Help</string>
    <string name="close3">Close</string>
    <string name="textview3">TextView</string>
    <string name="all_content_is_and_trademark_of_czech_games_edition_and_rio_grande_games_n_n_n_n_loading">All content is © and tradematrk of Czech Games Edition and Rio Grande Games.       Loading. . .</string>
    <string name="this_is_an_unlicened_fan_created_randomizer_app_for_use_with_the_galaxy_trucker_board_game">This is an unlicensed, fan-created randomizer app for use with the Galaxy Trucker board game.</string>
    <string name="using_the_randomizer">Using the Randomizer</string>
    <string name="get_last_randomize">Get Last Randomize</string>
    <string name="help2">HELP</string>
    <string name="save2">Save</string>
    <string name="smart_selection">Smart Selection</string>
    <string name="SET_PREFERNCES">Set Preferences</string>
    <string name="preference">Preferences</string>
    <string name="board_iii">Board III</string>
    <string name="another_big_expansion_tiles_and_cards">Another Big Expansion tiles and cards</string>
    <string name="boards">BOARDS</string>
    <string name="board_i">Board I</string>
    <string name="board_ia">Board IA</string>
    <string name="board_ic">Board IC</string>
    <string name="board_ii">Board II</string>
    <string name="board_iia">Board IIA</string>
    <string name="board_iib">Board IIB</string>
    <string name="board_iic">Board IIC</string>
    <string name="board_iiia">Board IIIA</string>
    <string name="board_iiib">Board IIIB</string>
    <string name="board_iiic">Board IIIC</string>
    <string name="board_iv">Board IV</string>
    <string name="board_ivc">Board IVC</string>
    <string name="extras">EXTRAS</string>
    <string name="evil_machinations">Evil Machinations</string>
    <string name="missions2">Missions</string>
    <string name="rough_roads">Rough Roads</string>
    <string name="support_team">Support Team</string>
    <string name="the_big_expansion_tiles_and_cards">The Big Expansion Tiles and Cards</string>
    <string name="use_boards">Use Boards:</string>
    <string name="extras2">Extras:</string>
    <string name="use_boards_extras">Use Boards: Extras:</string>
    <string name="select_all">Select All</string>
    <string name="save_and_close">Save and Close</string>
    <string name="select_all2">Select All</string>
</resources>
